Fixed weird free & open source section spacing

--- a/frontend/src/componments/DeveloperSection.css
+++ b/frontend/src/componments/DeveloperSection.css
@@ -1,18 +1,16 @@
 .developer-section-container {
     left: 0px;
     width: 100vw;
-    height: fit-content;
     position: absolute;
     bottom: 0px;
 }
 
 .open-source-container {
-    width: calc(100% - 120px);
     height: fit-content;
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 32px 0px 32px 120px;
+    padding: 32px 100px 32px 100px;
     background: var(--Darkest-Primary-Colour, #24272E);
 }
 
